tests/neg/magic-offset-header-a_wrapper.check
-- [E007] Type Mismatch Error: tests/neg/magic-offset-header-a.scala:2:19 ----------------------------------------------
2 |def test1(): Int = "无穷"  // error
  |                   ^^^^
  |                   Found:    ("无穷" : String)
  |                   Required: Int
  |
  | longer explanation available when compiling with `-explain`
